# DharmaGuard

./: .env.example  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
api-gateway/: Dockerfile  go.mod  main.go
api-gateway/internal/config/: config.go
core-engine/: CMakeLists.txt  Dockerfile
core-engine/include/surveillance/: trade_pattern_detector.hpp
core-engine/src/: main.cpp
core-engine/src/surveillance/: trade_pattern_detector.cpp
database/postgresql/init/: 001_schema.sql
database/postgresql/migrations/: 002_compliance_schema.sql
docs/api/: openapi.yaml
frontend/: next.config.js  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/surveillance/: AlertsList.tsx
infrastructure/helm/dharmaguard/: Chart.yaml  values.yaml
infrastructure/kubernetes/: configmap.yaml  namespace.yaml  secrets.yaml  surveillance-engine-deployment.yaml
infrastructure/monitoring/grafana/dashboards/: surveillance-overview.json
infrastructure/monitoring/prometheus/: rules.yml
infrastructure/terraform/: main.tf
microservices/audit-service/: Cargo.toml
microservices/audit-service/src/: main.rs
microservices/compliance-service/: Cargo.toml
microservices/compliance-service/src/: main.rs
microservices/reporting-service/: Cargo.toml
microservices/reporting-service/src/: main.rs
microservices/user-service/: Cargo.toml
microservices/user-service/src/: main.rs
microservices/user-service/src/handlers/: user_handlers.rs
microservices/user-service/src/models/: mod.rs  user.rs
microservices/user-service/src/services/: user_service.rs
ml-platform/src/models/: anomaly_detector.py
scripts/setup/: dev-environment.sh
scripts/testing/: run-integration-tests.sh
testing/load/: surveillance-engine.js
