[package]
name = "audit-service"
version = "1.0.0"
edition = "2021"
authors = ["DharmaGuard Team <team@dharmaguard.com>"]
description = "Blockchain-enabled Audit Service for DharmaGuard Platform"

[dependencies]
axum = { version = "0.7", features = ["json", "headers", "ws", "macros"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
ethereum-types = "0.14"
web3 = { version = "0.19", features = ["http", "signing"] }
ipfs-api-backend-hyper = { version = "0.6", features = ["with-hyper-tls"] }
kafka = "0.9"
