[package]
name = "compliance-service"
version = "1.0.0"
edition = "2021"
authors = ["DharmaGuard Team <team@dharmaguard.com>"]
description = "Compliance Management Service for DharmaGuard Platform"

[dependencies]
axum = { version = "0.7", features = ["json", "headers", "ws", "macros"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
